# wezterm_tool_1

./: README.md  support_pwsh.ps1
go_english_tool/: go.mod  main.go
go_english_tool/english/: config.json  words1.txt
todo_rust_cli/: Cargo.toml  README.md  todo_cli.txt
todo_rust_cli/src/: cli.rs  config.rs  format.rs  frontmatter.rs  main.rs  model.rs  store.rs
wezterm/: wezterm.lua
wezterm/config/: bindings.lua  fonts.lua  launch.lua
wezterm/events/: gui-startup.lua
wezterm_another/: wezterm.lua
